--- a/pom.xml
+++ b/pom.xml
@@ -233,6 +233,12 @@
 				<version>0.12</version>
 				<configuration>
 					<message>Creating site for ${project.version}</message>
+					<promoteTransitiveDependencies>true</promoteTransitiveDependencies>
+          <artifactSet>
+            <excludes>
+            <exclude>org.eclipse.mylyn.github:org.eclipse.egit.github.core</exclude>
+            </excludes>
+            </artifactSet>
 				</configuration>
 				<executions>
 					<execution>
@@ -430,7 +436,21 @@
 		</site>
 	</distributionManagement>
 
+<repositories>
+	    <!--other repositories if any-->
+	    <repository>
+	        <id>project.local</id>
+	        <name>project</name>
+	        <url>file:${project.basedir}/repo</url>
+	    </repository>
+	</repositories>
 	<dependencies>
+	
+	<dependency>
+		    <groupId>org.eclipse.mylyn.github</groupId>
+		    <artifactId>org.eclipse.egit.github.core</artifactId>
+		    <version>3.1.0.201310021548-r</version>
+		</dependency>
 		<dependency>
 			<groupId>net.jcip</groupId>
 			<artifactId>jcip-annotations</artifactId>
